[gd_scene load_steps=6 format=3 uid="uid://bhcc5ek84k6st"]

[ext_resource type="ArrayMesh" uid="uid://cbrmrha5aa5be" path="res://assets/Card1Mesh.res" id="1_s4ppf"]
[ext_resource type="Script" uid="uid://dqqxupvtkhoou" path="res://systems/FlipAnimation/FlipAnimation.gd" id="1_xnsie"]

[sub_resource type="Animation" id="Animation_tqoff"]
resource_name = "FlipFromDown"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardsRig/CardNew:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.23333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1.6334544, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardsRig:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.16666667, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -5.516)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CardsRig/CardProxyParent:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8333333, 0.835048, 2.6000001),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0.00773179, 0), Vector3(0, 7.9660854, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CardsRig/CardProxyParent:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.835048, 1.0589715, 1.5907898),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.9654114), Vector3(0, 0, -2.0887403)]
}

[sub_resource type="Animation" id="Animation_mtxap"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardsRig/CardNew:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardsRig:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CardsRig/CardProxyParent:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CardsRig/CardProxyParent:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mtxap"]
_data = {
&"DOWN": SubResource("Animation_tqoff"),
&"RESET": SubResource("Animation_mtxap")
}

[node name="FlipAnimation" type="Node3D"]
script = ExtResource("1_xnsie")

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mtxap")
}

[node name="CardsRig" type="Node3D" parent="."]

[node name="CardProxyParent" type="Node3D" parent="CardsRig"]

[node name="Temp1" type="MeshInstance3D" parent="CardsRig/CardProxyParent"]
visible = false
mesh = ExtResource("1_s4ppf")
skeleton = NodePath("../..")

[node name="CardNew" type="Node3D" parent="CardsRig"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.7576394)

[node name="CardParent" type="Node3D" parent="CardsRig/CardNew"]
transform = Transform3D(1, -8.742278e-08, -8.742278e-08, -8.742278e-08, -1, 0, -8.742278e-08, 7.642742e-15, -1, 0, 0, 2.7686458)

[node name="Temp2" type="MeshInstance3D" parent="CardsRig/CardNew/CardParent"]
visible = false
mesh = ExtResource("1_s4ppf")
skeleton = NodePath("../..")
